feat: use virtual threads in MQTT Subscribe
This is safe as those threads are mainly doing I/O.